<resources>
    <string name="app_name">eCommerce</string>


    <!--Server Information-->

    <string name="see_all">See All</string>
    <string name="recent_searches">recent_searches</string>
    <string name="schedule">schedule</string>
    <string name="product">Products</string>

    <string name="_5399_egp">_EGP</string>
    <string name="add_to_cart">add to cart</string>
    <string name="laptop">Laptop</string>

    <string name="product_image">Product Image</string>

    <string name="samsung_galaxy_a70">Samsung Galaxy A70</string>

    <string name="all_mobiles">All Mobiles</string>

    <string name="no_internet_connection">No Internet Connection</string>


    <string name="fulfilled">Fulfilled</string>

    <string name="search">Search</string>

    <string name="search_hint">Я ищу</string>
    <string name="empty"> </string>

    <string name="cart">Cart</string>


    <string name="basket">В корзину</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="marwa_eltayeb">Marwa Eltayeb</string>

    <string name="languages">Languages</string>

    <string name="add_product">Add Product</string>

    <string name="nameOfProduct">Name</string>

    <string name="price">Price</string>

    <string name="quantity">Quantity</string>

    <string name="supplier">Supplier</string>

    <string name="category">Category</string>

    <string name="image_of_product">Image Of Product</string>

    <string name="select_image">Select Image</string>

    <string name="save">Save</string>

    <string name="required_data">No null values are accepted</string>


    <string name="submit">Submit</string>

    <string name="cancel">Cancel</string>


    <string name="text_length">150</string>

    <string name="returnProduct">Changed your mind, you can return your product and get a full refund.</string>

    <string name="want_to_exit">Do you really want to exit?</string>

    <string name="ok">OK</string>


    <string name="loading">Loading...</string>


    <string name="no_products_in_this_category">No products in this category</string>

    <string name="english">English</string>

    <string name="counter">60</string>

    <string name="buy">Buy</string>

    <string name="dummy_phone">01034238328</string>


    <string name="clear_all">Clear all</string>

    <string name="what_are_you_looking_for">What are you looking for?</string>


</resources>