<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/dimen5dp"
        card_view:cardElevation="@dimen/dimen1dp"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="@dimen/dimen1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen5dp"
            android:background="@color/white"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="@dimen/dimen140dp"
                android:layout_height="@dimen/dimen150dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/product_image"
                android:src="@drawable/dummy_data" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:text="@string/fulfilled"
                    android:background="#1196FE"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtProductSupplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen5dp"
                    android:padding="5dp"
                    android:text="@string/supplier"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txtProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/samsung_galaxy_a70"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp" />

                <TextView
                    android:id="@+id/txtProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:text="@string/_5399_egp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen1dp"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:layout_marginEnd="@dimen/dimen1dp"
                    android:layout_marginBottom="@dimen/dimen10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addToCart"
                        android:layout_width="115dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="@dimen/dimen5dp"
                        android:background="@color/green"
                        android:gravity="center"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/imgCart"
                        android:layout_width="@dimen/dimen30dp"
                        android:layout_height="@dimen/dimen30dp"
                        android:layout_marginStart="@dimen/dimen20dp"
                        android:layout_marginEnd="@dimen/dimen5dp"
                        android:contentDescription="@string/add_to_cart"
                        android:src="@drawable/ic_shopping_cart_green" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>