<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        card_view:cardCornerRadius="@dimen/dimen10dp"
        card_view:cardElevation="@dimen/dimen1dp"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="@dimen/dimen1dp">

        <LinearLayout

            android:id="@+id/productItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <ImageView

            android:id="@+id/imgProductImage"
            android:layout_width="@dimen/dimen140dp"
            android:layout_height="@dimen/dimen150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen10dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/dummy_data"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/txtProductCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen1dp"

                android:ellipsize="end"
                android:maxLines="1"

                android:text="@string/add_product"
                android:textColor="@color/black"

                android:textSize="@dimen/dimen18sp" />

            <TextView

                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen1dp"

                android:ellipsize="end"
                android:maxLines="1"

                android:text="@string/add_product"
                android:textColor="@color/black"

                android:textSize="@dimen/dimen18sp" />

            <TextView

                android:id="@+id/txtProductProducer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen1dp"

                android:ellipsize="end"
                android:maxLines="1"

                android:text="@string/add_product"
                android:textColor="@color/black"

                android:textSize="@dimen/dimen18sp" />

                <TextView

                    android:id="@+id/txtProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen1dp"
                    android:text="@string/price"
                    android:textColor="@color/darkBlue"

                    android:textSize="@dimen/dimen18sp"

                    android:textStyle="bold"
                    android:visibility="visible" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView

                    android:id="@+id/imgCart"
                    android:layout_width="35dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:layout_margin="@dimen/dimen20dp"
                    android:contentDescription="@string/add_to_cart"
                    android:src="@drawable/ic_shopping_cart_green" />
                <TextView

                    android:id="@+id/txtCartQuntity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen1dp"
                    android:layout_marginTop="@dimen/dimen1dp"
                    android:text="@string/empty"
                    android:textColor="@color/darkBlue"

                    android:textSize="@dimen/dimen18sp"

                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>